# stavec

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: test.yml
src/: cmp.rs  container.rs  default.rs  error.rs  generic.rs  iter.rs  lib.rs  sized.rs  static_.rs  string.rs  tests.rs  traits.rs  utils.rs
src/generic/: default.rs  maybe_sized.rs  mod.rs  sized.rs
src/string/: mod.rs
src/vec/: mod.rs  sized.rs
