[package]
name = "stavec"
version = "0.2.0"
edition = "2021"

description = "Stack-allocated vector with static capacity"
documentation = "https://docs.rs/stavec"
homepage = "https://github.com/agerasev/stavec"
repository = "https://github.com/agerasev/stavec.git"
readme = "README.md"
keywords = ["static", "vector"]
categories = ["data-structures", "no-std"]
license = "MIT/Apache-2.0"

[features]
default = ["std"]
std = ["num-traits/std"]
repr-c = []

[dependencies]
num-traits = { version = "0.2", default-features = false }
